# screeny

./: LICENSE  README.md  pyproject.toml
src/screeny/: __init__.py  __main__.py  image_compression.py  server.py
