[project]
name = "mcp-server-screeny"
version = "0.1.12"
description = "macOS MCP server for window enumeration and screenshot capture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rohan Ravindran", email = "r8ravind@uwaterloo.ca"}
]
keywords = ["mcp", "screenshot", "macos", "window", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.0",
    "pyobjc-framework-Quartz>=10.0",
    "Pillow>=10.0.0",
]

[project.scripts]
mcp-server-screeny = "screeny.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screeny"]

[tool.hatch.build.targets.sdist]
exclude = [
    "test_mcp.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
